--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -1,2 +1,12 @@
 #key=classname
 search=controller.Search
+accountTransfer=controller.AccountTransfer
+getProfile=controller.GetProfile
+insertCash=controller.InsertCash
+login=controller.Login
+memoBox=controller.MemoBox
+read=controller.Read
+selectCash=controller.SelectCash
+selectTrade=controller.SelectTrade
+signup=controller.SignUp
+transferComplete=controller.TransferComplete
