--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -6,6 +6,7 @@ insertCash=controller.InsertCash
 login=controller.Login
 memoBox=controller.MemoBox
 read=controller.Read
+write=controller.Write
 selectCash=controller.SelectCash
 selectTrade=controller.SelectTrade
 signup=controller.SignUp
