--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -10,3 +10,4 @@ selectCash=controller.SelectCash
 selectTrade=controller.SelectTrade
 signup=controller.SignUp
 transferComplete=controller.TransferComplete
+userDelete=controller.UserDelete
