--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -11,3 +11,5 @@ selectTrade=controller.SelectTrade
 signup=controller.SignUp
 transferComplete=controller.TransferComplete
 userDelete=controller.UserDelete
+userUpdate=controller.UserUpdate
+userPasswordUpdate=controller.UserPasswordUpdate
