--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -13,3 +13,4 @@ transferComplete=controller.TransferComplete
 userDelete=controller.UserDelete
 userUpdate=controller.UserUpdate
 userPasswordUpdate=controller.UserPasswordUpdate
+updateCheck=controller.UserUpdateCheck
