--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -14,3 +14,4 @@ userDelete=controller.UserDelete
 userUpdate=controller.UserUpdate
 userPasswordUpdate=controller.UserPasswordUpdate
 updateCheck=controller.UserUpdateCheck
+logout=controller.UserLogout
