카테고리 큰 카테고리에서는 검색 안되나요?

--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -15,3 +15,4 @@ userUpdate=controller.UserUpdate
 userPasswordUpdate=controller.UserPasswordUpdate
 updateCheck=controller.UserUpdateCheck
 logout=controller.UserLogout
+userUpdateOnLoad=controller.UserUpdateOnLoad
