add cash and requesttrade

--- a/ItemMarket/src/util/actionMapping.properties
+++ b/ItemMarket/src/util/actionMapping.properties
@@ -17,3 +17,5 @@ updateCheck=controller.UserUpdateCheck
 logout=controller.UserLogout
 userUpdateOnLoad=controller.UserUpdateOnLoad
 userPassWordFind=controller.UserPassWordFind
+requestTrade=controller.RequestTrade
+selectRequestTrade=controller.SelectRequestTrade
